Name:		finite-field
Version:	0.1.0
License:	BSD3
License-File:	COPYING
Author:		Masahiro Sakai (masahiro.sakai@gmail.com)
Maintainer:	masahiro.sakai@gmail.com
Category:	Math
Cabal-Version:	>= 1.10
Synopsis:	Finite Fields
Description:	Implementation of finite fields
Bug-Reports:	https://github.com/msakai/finite-field/issues
Extra-Source-Files:
   README.md
   COPYING
   .travis.yml
   .gitignore
Build-Type: Simple

source-repository head
  type:     git
  location: git://github.com/msakai/finite-field.git

Library
  Hs-source-dirs: src
  Build-Depends:
     base >=4 && <5, deepseq, type-level-natural-number, algebra >=3.1
  Default-Language: Haskell2010
  Other-Extensions:
     MultiParamTypeClasses
     ScopedTypeVariables
  Exposed-Modules:
     Data.FiniteField.PrimeField

Test-suite TestPrimeField
  Type:              exitcode-stdio-1.0
  HS-Source-Dirs:    test
  Main-is:           TestPrimeField.hs
  Build-depends:
      base >=4 && <5,
      containers,
      test-framework,
      test-framework-th,
      test-framework-hunit,
      test-framework-quickcheck2,
      HUnit,
      QuickCheck >=2 && <3,
      finite-field,
      primes,
      type-level-natural-number,
      natural-number
  Default-Language: Haskell2010
  Other-Extensions: TemplateHaskell
